--- a/content/discover/hackathons/202005_beijing/5.md
+++ b/content/discover/hackathons/202005_beijing/5.md
@@ -38,23 +38,12 @@ heroopan@gmail.com
  * c/c++
  * 桌面/移动端 UI
 
-**开发资源**
-
-* 仓库地址 https://github.com/elastos/Elastos.ELA.SPV.Cpp
-
-* MacOS/Ubuntu等其他类Unix开发环境
-
-* git
-
-* cmake
-
-  
-
 **参考资源**
+ * 仓库地址： https://github.com/elastos/Elastos.ELA.SPV.Cpp
 
-Wiki：https://github.com/elastos/Elastos.ELA.SPV.Cpp/wiki/Getting-Started
+ * Wiki：https://github.com/elastos/Elastos.ELA.SPV.Cpp/wiki/Getting-Started
 
-Demo：https://github.com/elastos/Elastos.ELA.SPV.Cpp/blob/master/Wallet/Wallet.cpp
+ * Demo：https://github.com/elastos/Elastos.ELA.SPV.Cpp/blob/master/Wallet/Wallet.cpp
 
 
 
