Update description of 9th marathon project

--- a/content/discover/hackathons/202005_beijing/9.md
+++ b/content/discover/hackathons/202005_beijing/9.md
@@ -6,6 +6,10 @@ pre = ""
 alwaysopen = false
 +++
 
+**项目标题**: Carrier离线消息中继服务
+
+**项目描述**:
+
 在去中心化Carrier消息通信网络中，如果节点Bob向Friend节点Alice发送消息时，分为以下两种场景：
 
 - 如果好友Alice节点处于在线连接状态，则Bob节点直接通过Carrier网络将消息传送到Alice节点；
@@ -13,12 +17,22 @@ alwaysopen = false
 
 目前离线消息存储网络Hive IPFS/Cluster 与Carrier通信网络时两个分离的网络。该主题任务希望借助于本身Carrier 网络节点（或者Carrier bootstrap节点）的基础上提供去中心化的离线消息发送/接收服务。
 
-**功能要求**
+**项目难度**: 高
+
+**项目社区导师**:  Tang Zhilong
+
+**导师联系方式**: tangzhilong@trinity-tech.io
+
+**项目产出要求**
 
 - Friend在线时按照正常的Carrier消息直接发送消息到对端Friend；
 - Friend对端离线情况能发送消息，一旦对端Friend上线后能接收到离线消息。
 
-**开发资源**
+**项目技术要求**
+
+- C/C++ 开发能力
+
+**参考资源**
 
 - 仓库位置：
   - Native SDK: https://github.com/elastos/Elastos.NET.Carrier.Native.SDK
