Update description of 10th marathon project

--- a/content/discover/hackathons/202005_beijing/10.md
+++ b/content/discover/hackathons/202005_beijing/10.md
@@ -4,7 +4,11 @@ weight = 100
 chapter = false
 pre = ""
 alwaysopen = false
-+++ 
++++
+
+**项目标题**： DID SDK的API文档编写
+
+**项目描述**：
 
 Elastos DID 是Elastos生态中去中心化的ID身份系统，完全兼容W3C DID/可验证凭证标准，目前Elastos DID在客户端侧SDK已经支持以下特性：
 
@@ -15,12 +19,22 @@ Elastos DID 是Elastos生态中去中心化的ID身份系统，完全兼容W3C D
 
 同时Elastos DID 提供已Java/Swift/Native等SDK版本供开发者选择使用。虽然目前已经基本完成以上眼版本的SDK的开发，但是目前对应的APIs文档还不完善，有的版本（例如Java SDK）还未启动APIs文档编写。欢迎社区开发者能够在理解相关SDK接口的基础上，按照APIs注释规范，不断完善和丰富APIs接口文档，同时能够编写和完善相应的开发者指导文档。
 
-**功能要求**
+**项目难度**： 中
+
+**项目社区导致**：Tang Zhilong
+
+**导师联系方式**： tangzhilong@trinity-tech.io
+
+**项目产出要求**
 
 - 按照APIs注释规范，基于任一语言（Java/Swift/C）版本编写和完善APIs接口文档；
 - 编写相应的开发者指导文档；
 
-**开发资源**
+**项目技术要求**
+
+- Java/Swift/C 任一语言开发能力
+
+**参考资源**
 
 - DID Native SDK: https://github.com/elastos/Elastos.DID.Native.SDK
 - DID Java SDK: https://github.com/elastos/Elastos.DID.Java.SDK
