--- a/content/discover/hackathons/202005_beijing/4.md
+++ b/content/discover/hackathons/202005_beijing/4.md
@@ -6,55 +6,45 @@ pre = ""
 alwaysopen = false
 +++
 
-亦来云的ETH侧链是基于以太坊源码进行开发的。所以ETH侧链完美兼容了以太坊的所有功能和开发方式。可以采用开发以太坊应用的方式来开发亦来云的以太坊侧链应用，比如以太坊的Web3.js库。
+1. 项目标题：Elastos ETH 侧链项目
+2. 项目描述：亦来云的ETH侧链是基于以太坊源码进行开发的。所以ETH侧链完美兼容了以太坊的所有功能和开发方式。可以采用开发以太坊应用的方式来开发亦来云的以太坊侧链应用，比如以太坊的Web3.js库。
 我们现在就利用Web3.js 库开发基于亦来云侧链的一些应用。
+3. 项目难度：中
+4. 项目社区导师：Xiaobin Zhang, black
+5. 导师联系方式：zhangxiaobin@gelaxy.io
+6. 合作导师联系方式（选填）：ID或姓名，电子邮箱
+7. 项目产出要求：
+  - 网站代码，或小程序代码,或手机app
+   - fork亦来云ETH侧链代码，并运行测试网 。(geth --testnet)
+   - 可以统计某个时间段的所有区块
+   - 可以统计某个时间段的所有交易
+   - 把交易分成不同类别：充值交易，提现交易，创建合约交易，调用合约交易
 
-
-**功能要求**
-
-* 包含界面（可以是WEB 页画，也可以是UI界面)
-
-* fork亦来云ETH侧链代码，并运行测试网 。(geth --testnet)
-
-* 可以统计某个时间段的所有区块
-
-* 可以统计某个时间段的所有交易
-
-* 把交易分成不同类别：充值交易，提现交易，创建合约交易，调用合约交易
-
-  
-
-**开发资源**
-
-* 仓库地址 https://github.com/elastos/Elastos.ELA.SideChain.ETH
-
-* 测试网浏览器 https://testnet.elaeth.io/
-
-* MacOS/Ubuntu等其他类Unix开发环境
-
-* git
-  
-
-**开发参考文档**
-
-* Wiki：https://github.com/elastos/Elastos.ELA.SideChain.ETH/wiki
-
-* Web3.js API ：https://web3.tryblockchain.org/
-
-**充值，提现交易的判断方式**
-
-在亦来云侧链中有两种不同于以太坊的交易类型，就是充值交易（主链到侧链的转账), 提现交易 （侧链到主链的转账)。
-判断方式为：
-
-* 充值交易 
+8. 项目技术要求：
+   - 基本的web、js前端
+     - 了解以太坊交易结构和开发方式 
+   - 以太坊web3.js 基本API 和使用方式
    
-   1.此交易类型是通过以太坊交易结构的data来表示的。也就是交易携带的数据。此数据为此交易所在主链的交易hash。
+9. 参考资源
+   - ETH侧链仓库：[https://github.com/elastos/Elastos.ELA.SideChain.ETH](https://github.com/elastos/Elastos.ELA.SideChain.ETH)
+   - Wiki：[https://github.com/elastos/Elastos.ELA.SideChain.ETH/wiki](https://github.com/elastos/Elastos.ELA.SideChain.ETH/wiki)
+   - 测试网浏览器： [https://testnet.elaeth.io/](https://testnet.elaeth.io//)
+   - Web3.js API ：[https://web3.tryblockchain.org/](https://web3.tryblockchain.org/)
+ 
+ 
+10. 充值，提现交易的判断方式
+
+	在亦来云侧链中有两种不同于以太坊的交易类型，就是充值交易（主链到侧链的转账), 提现交易 （侧链到主链的转账)。判断方式为：
+
+-  充值交易 
    
-   2.交易的to地址为黑洞地址(0x0000000000000000000000000000000000000000)
+   - 此交易类型是通过以太坊交易结构的data来表示的。也就是交易携带的数据。此数据为此交易所在主链的交易hash。
    
-   3.严格来说，可以根据tx.data在主链可以查到tx.data这个交易。（可以不要求)
+   - 交易的to地址为黑洞地址(0x0000000000000000000000000000000000000000)
    
-* 提现交易
+   - 严格来说，可以根据tx.data在主链可以查到tx.data这个交易。（可以不要求)
+   
+- 提现交易
 
 	提现交易的判断比较简单，因为侧链的提现交易是通过合约实现的。所以判断条件为：***交易的To为合约地址，地址为：0x491bC043672B9286fA02FA7e0d6A3E5A0384A31A***
 
