--- a/content/discover/hackathons/202005_beijing/10.md
+++ b/content/discover/hackathons/202005_beijing/10.md
@@ -19,7 +19,7 @@ Elastos DID 是Elastos生态中去中心化的ID身份系统，完全兼容W3C D
 
 同时Elastos DID 提供已Java/Swift/Native等SDK版本供开发者选择使用。虽然目前已经基本完成以上眼版本的SDK的开发，但是目前对应的APIs文档还不完善，有的版本（例如Java SDK）还未启动APIs文档编写。欢迎社区开发者能够在理解相关SDK接口的基础上，按照APIs注释规范，不断完善和丰富APIs接口文档，同时能够编写和完善相应的开发者指导文档。
 
-**项目难度**： 中
+**项目难度**：低
 
 **项目社区导致**：Tang Zhilong
 
