--- a/content/discover/hackathons/202005_beijing/11.md
+++ b/content/discover/hackathons/202005_beijing/11.md
@@ -1,10 +1,15 @@
 +++
-title = "Carrier Go/Python/NodeJs SDK和APIs"
+title = "Elastos DID Go/Python/NodeJs SDK和APIs"
 weight = 110
 chapter = false
 pre = ""
 alwaysopen = false
-+++  
+
++++
+
+**项目标题**：Elastos DID Go/Python/NodeJs SDK和APIs
+
+**项目描述**:
 
 Elastos DID 是Elastos生态中去中心化的ID身份系统，完全兼容W3C DID/可验证凭证标准，目前Elastos DID在客户端侧SDK已经支持以下特性：
 
@@ -21,13 +26,25 @@ Elastos DID 是Elastos生态中去中心化的ID身份系统，完全兼容W3C D
 
 目前社区开发者除了Java/Swift/C版本 APIs接口需求外，也有对其他高层语言接口的需求，比如Go，Python以及NodeJs等。希望社区参与能在理解Elasots DID的基础上，根据底层DID/C接口形式，能够抽象和实现基于Go/Python/NodeJs的 DID封装接口和对应SDK。
 
-**功能要求**
+**项目难度**: 中
+
+**项目社区导师**: Tang Zhilong
+
+**导师联系方式**: tangzhilong@trinity-tech.io
+
+**项目产出要求**
 
 - 使用Go/Python/NodeJS任一语言封装底层DID SDK接口；
-- 基于Go/Python/NodeJS任一语言实现的SDK；
-- 有对应的Demo应用
+- 基于Go/Python/NodeJS任一语言实现的SDK实现；
+- 基于该语言封装的SDK的sample应用
 
-**开发资源**
+**项目技术要求**
+
+- C/C++语言开发能力；
+- Go/Python/NodeJS 任一语言开发能力；
+- Go/Python/NodeJS项目C-binding开发能力
+
+**参考资源**
 
 - DID Native SDK: https://github.com/elastos/Elastos.DID.Native.SDK
 - DID Java SDK: https://github.com/elastos/Elastos.DID.Java.SDK
