--- a/content/discover/hackathons/202005_beijing/4.md
+++ b/content/discover/hackathons/202005_beijing/4.md
@@ -1,5 +1,5 @@
 +++
-title = "ETH侧链开发"
+title = "Elastos ETH 侧链项目"
 weight = 40
 chapter = false
 pre = ""
@@ -14,7 +14,7 @@ alwaysopen = false
 5. 导师联系方式：zhangxiaobin@gelaxy.io
 6. 合作导师联系方式（选填）：ID或姓名，电子邮箱
 7. 项目产出要求：
-  - 网站代码，或小程序代码,或手机app
+   - 网站代码，或小程序代码,或手机app
    - fork亦来云ETH侧链代码，并运行测试网 。(geth --testnet)
    - 可以统计某个时间段的所有区块
    - 可以统计某个时间段的所有交易
@@ -22,7 +22,7 @@ alwaysopen = false
 
 8. 项目技术要求：
    - 基本的web、js前端
-     - 了解以太坊交易结构和开发方式 
+   - 了解以太坊交易结构和开发方式 
    - 以太坊web3.js 基本API 和使用方式
    
 9. 参考资源
