--- a/content/discover/hackathons/202005_beijing/7.md
+++ b/content/discover/hackathons/202005_beijing/7.md
@@ -5,42 +5,29 @@ chapter = false
 pre = ""
 alwaysopen = false
 +++ 
+1.项目标题：桌面端钱包
+2.项目描述：相比轻量级SPV钱包而言，全节点钱包能获完整的区块信息，支持更多复杂的业务功能扩展。目前有的钱包大多数都是移动端钱包及网页钱包，缺少安卓及苹果版桌面端钱包，桌面端钱包可以给PC端用户带来更多的便利。本题旨在开发一款全节点桌面端钱包。
+3.项目难度：中
+4.项目社区导师：Bruce Zhang
+5.导师联系方式：zyx@elaphant.app
+6.合作导师联系方式（选填）：ID或姓名，电子邮箱
+7.项目产出要求：
 
-相比轻量级SPV钱包而言，全节点钱包能获完整的区块信息，支持更多复杂的业务功能扩展。目前有的钱包大多数都是移动端钱包及网页钱包，缺少安卓及苹果版桌面端钱包，桌面端钱包可以给PC端用户带来更多的便利。本题旨在开发一款全节点桌面端钱包。
+- 包含UI界面
+- 支持生成助记词，创建新钱包
+- 支持单签及多签钱包创建
+- 支持转账，查看接收地址
+- 支持导入/导出助记词及keystore
+- 支持交易状态追踪及交易记录查询
+8.项目技术要求：
 
+- MacOS/Ubuntu
+- git
+- cmake
+9.参考资源
 
-
-**功能要求**
-
-* 包含UI界面
-
-* 支持生成助记词，创建新钱包
-
-* 支持单签及多签钱包创建
-
-* 支持转账，查看接收地址
-
-* 支持导入/导出助记词及keystore
-
-* 支持交易状态追踪及交易记录查询
-
-  
-
-**开发资源**
-
-* 主链仓库地址 https://github.com/elastos/Elastos.ELA/
-
-* MacOS/Ubuntu
-
-* git
-
-* cmake
-
-  
-
-**开发参考文档**
-
-主链RPC文档：https://github.com/elastos/Elastos.ELA/blob/v0.4.3/docs/jsonrpc_apis.md
+- 主链仓库地址 https://github.com/elastos/Elastos.ELA/
+- 主链RPC文档：https://github.com/elastos/Elastos.ELA/blob/v0.4.3/docs/jsonrpc_apis.md
 
 
 
