--- a/content/discover/hackathons/202005_beijing/6.md
+++ b/content/discover/hackathons/202005_beijing/6.md
@@ -1,16 +1,32 @@
 +++
 title = "主链节点参数简化"
-weight = 60
+weight = 50
 chapter = false
 pre = ""
 alwaysopen = false
 +++
 
+**项目描述**
+
 目前主链配置文件中很多参数是为了测试添加，参数庞杂。bitcoin中开放出来的参数都是对共识没有影响，只是改变节点本身支持的功能项，本题旨在参考其bitcoin，调整目前的参数配置，提供一个面向普通用户的简介版本。
 
+**项目难度**
 
+中
 
-**功能要求**
+**项目社区导师**
+
+Zehua jiang
+
+**导师联系方式**
+
+jiangzehua@gelaxy.io
+
+**合作导师联系方式**
+
+无
+
+**项目产出要求**
 
 * 去除面向测试的参数，不再提供配置
 
@@ -18,7 +34,7 @@ alwaysopen = false
 
   
 
-**开发资源**
+**项目技术要求**
 
 * 仓库地址 https://github.com/elastos/Elastos.ELA/
 
@@ -29,8 +45,8 @@ alwaysopen = false
 * cmake
 
   
-
-**开发参考文档**
+  
+**参考资源**
 
 bitcoin core参数生成：https://jlopp.github.io/bitcoin-core-config-generator/
 
