update 12/13/14/15/17/18/19 project description

--- a/content/discover/hackathons/202005_beijing/15.md
+++ b/content/discover/hackathons/202005_beijing/15.md
@@ -6,20 +6,34 @@ pre = ""
 alwaysopen = false
 +++
 
+**项目标题**：基于Carrier SDK的WebRTC iOS扩展实现
+
+**项目描述**：
+
 利用Elastos Carrier 是去中心化的端到端加密的消息通信平台的特点，经与外部团队合作，初步已经实现了基于Carrier网络的WebRTC Android版本接口，实现了Carrier节点间端对端的WebRTC音视频通信功能。参考WebRTC Android接口，实现相应基于Carrier的WebRTC iOS版本。
 
-**功能要求**
+**项目难度**：高
+
+**项目社区导师**： Tang Zhilong
+
+**导师联系方式**：tangzhilong@trinity-tech.io
+
+**项目产出要求**
 
 - 提供基于Carrier的WebRTC iOS 接口实现；
-- 提供基于Carrier WebRTC iOS接口的音视频通信Demo应用。
+- 提供基于Carrier WebRTC iOS接口的音视频通信Sample应用。
 
-**开发资源**
+**项目技术要求**
+
+* WebRTC 音视频技术开发能力；
+* Swift/iOS 应用开发能力；
+
+**参考资源**
 
 - 仓库地址
 
   - Carrier iOS SDK：https://github.com/elastos/Elastos.NET.Carrier.Swift.SDK;
   - 基于Carrier的WebRTC Android 仓库：https://gitlab.com/elastos/Elastos.NET.WebRTC.Android.SDK
 
-**参考文档**
-
 - Carrier iOS SDK 文档，参见仓库 https://github.com/elastos/Elastos.NET.Carrier.Swift.SDK 中README 文档生成指导。
+
