--- a/content/discover/hackathons/202005_beijing/12.md
+++ b/content/discover/hackathons/202005_beijing/12.md
@@ -4,7 +4,12 @@ weight = 120
 chapter = false
 pre = ""
 alwaysopen = false
+
 +++
+
+**项目标题**: DID 浏览器插件，支持DID登录
+
+**项目描述**：
 
 Elastos DID 是Elastos生态中去中心化的ID身份系统，完全兼容W3C DID/可验证凭证标准，目前Elastos DID在客户端侧SDK已经支持以下特性：
 
@@ -17,12 +22,22 @@ Elastos DID 是Elastos生态中去中心化的ID身份系统，完全兼容W3C D
 
 欢迎社区开发者实现基于任一浏览器（比如Safari/Chrome/Opera等）的Elastos DID服务插件，用户能够通过该DID 服务插件授权Elastos DID身份登录Elastos 应用。
 
-**功能要求**
+**项目难度**：高
+
+**项目社区导师**: Tang Zhilong
+
+**项目联系方式**: tangzhilong@trinity-tech.io
+
+**项目产出要求**
 
 - 要求基于任一浏览器平台（Safari/Chrome/Opera等）实现Elastos DID插件；
 - 体现用户参与授权DID身份登录；
 
-**开发资源**
+**项目技术要求**
+
+- 基于任一浏览器 (Safari/Chrome/Opera等）浏览器的插件技术。
+
+**参考资源**
 
 - DID Native SDK: https://github.com/elastos/Elastos.DID.Native.SDK
 - DID Java SDK: https://github.com/elastos/Elastos.DID.Java.SDK
