--- a/content/discover/hackathons/202005_beijing/13.md
+++ b/content/discover/hackathons/202005_beijing/13.md
@@ -4,7 +4,11 @@ weight = 130
 chapter = false
 pre = ""
 alwaysopen = false
-+++ 
++++
+
+**项目标题**： DID在溯源或其他领域的应用
+
+**项目描述**:
 
 Elastos DID 是Elastos生态中去中心化的ID身份系统，完全兼容W3C DID/可验证凭证标准，目前Elastos DID在客户端侧SDK已经支持以下特性：
 
@@ -17,13 +21,23 @@ Elastos DID 是Elastos生态中去中心化的ID身份系统，完全兼容W3C D
 
 欢迎社区开发者即可以参考其他区块链DID溯源领域的应用，或者也可以根据自己对Elastos DID的理解以及其他的应用场景需求实现基于Elastos DID的应用。
 
-**功能要求**
+**项目难度**： 高
+
+**项目社区导师**：Tang Zhilong
+
+**导师联系方式**:  tangzhilong@trinity-tech.io
+
+**项目产出要求**
 
 - 利用Elastos DID的特性和优势实现应用；
 - 必须使用Java/Swift/Native 或者Trinity typescript/Javascript SDK其中任一的DID SDK；
 - 应用能体现Elastos DID的优势和价值；
 
-**开发资源**
+**项目技术要求**
+
+- Java/Swift/C 任一语言开发能力；
+
+**参考资源**
 
 - DID Native SDK: https://github.com/elastos/Elastos.DID.Native.SDK
 - DID Java SDK: https://github.com/elastos/Elastos.DID.Java.SDK
