--- a/content/discover/hackathons/202005_beijing/14.md
+++ b/content/discover/hackathons/202005_beijing/14.md
@@ -6,18 +6,27 @@ pre = ""
 alwaysopen = false
 +++
 
+**项目标题**: 基于Hyper Connect 的物联网方案
+
+**项目描述**:
+
 Hyper connect是基于Elastos Carrier去中心化通信平台之上的端对端的IoT（物联网）的解决方案，目前已经提供比较完整的APIs开发文档，同时已有主流语言版本支持。欢迎社区开发者基于Hyper Connect的IoT 框架之上，根据具体的场景需求设计相关的有创意的应用，比如门锁，家具电器控制等。
 
-**功能要求**
+**项目难度**：高
+
+**项目社区导师**： Tang Zhilong
+
+**导师联系方式**： tangzhilong@trinity-tech.io
+
+**项目产出要求**
 
 - 利用Hyper Connect IoT方案的优势和特点设计应用；
+- Sample应用
 
-**开发资料**
+**参考资料**
 
 - Hyper Connect 网站：https://hyperconnect.io/
 - Hyper Connect github仓库：https://github.com/cyber-republic?utf8=%E2%9C%93&q=hyperconnect
-
-仓库资料：
 
 - Android remoter： https://github.com/cyber-republic/hyperconnect-remote-controller-android
 - iOS remoter：https://github.com/cyber-republic/hyperconnect-remote-controller-ios
