--- a/content/discover/hackathons/202005_beijing/17.md
+++ b/content/discover/hackathons/202005_beijing/17.md
@@ -6,17 +6,32 @@ pre = ""
 alwaysopen = false
 +++
 
+**项目标题**： 基于Trinity的dApp开发
+
+**项目描述**：
+
 Elatos Trinity（elatOS）是集成所有Elastos服务的访问入口，包括ELA主链，DID侧链，ETH侧链，Carrier去中心化通信服务，去中心化数据存储服务Hive等。同时Trinity Runtime是提供类似可信运行环境的程序浏览器平台。目前支持运行程序主要是H5+JS程序。
 
 欢迎社区开发者基于现有的Trinity提供的Plugin服务以及built-in应用的Intent服务，设计和编写具有创意的Trinity dApp应用。
 
-**功能要求**
+**项目难度**：中
+
+**项目社区导师**： Tang Zhilong 
+
+**导师联系方式**： tangzhilong@trinity-tech.io
+
+**项目产出要求**
 
 - 必须使用一个或多个Trinity plugin服务或者Intent服务；
 - Trinity应用必须按照Trinity规范（目前兼容ionic angular规范）
 
+**项目技术要求**
+
+- H5 ionic 应用开发能力
+- Javascript/typescript 语言开发能力
+
 **开发资源**
 
 - Trinity主仓库：https://github.com/elastos/Elastos.Trinity
-- 以及Trinity下的submodule仓库
+- Trinity下的submodule仓库
 
