--- a/content/discover/hackathons/202005_beijing/18.md
+++ b/content/discover/hackathons/202005_beijing/18.md
@@ -6,6 +6,10 @@ pre = ""
 alwaysopen = false
 +++
 
+**项目标题**：Hive SDK接到Dropbox等其他云盘
+
+**项目描述**：
+
 Elastos Hive SDK是为了方便前端开发者使用的一套文件/数据存储接口。当前Hive SDK已经支持后端文件/数据存储对接到 OneDrive商业云存储平台，同时也支持对标准去中心化的数据存储平台-标准IPFS存储平台。
 
 为了尽可能方便应用平台的开发，目前Hive SDK已经支持以下语言版本：
@@ -16,12 +20,22 @@ Elastos Hive SDK是为了方便前端开发者使用的一套文件/数据存储
 
 为了集成支持更多的后端云存储平台，欢迎社区开发者扩展Hive SDK对接到更多的主流云存储平台，比如Dropbox，Google Drive，华为等公共云存储平台。
 
-**功能要求**
+**项目难度**：中
+
+**项目社区导师**：Tang Zhilong
+
+**导师联系方式**： tangzhilong@trinity-tech.io
+
+**项目产出要求**：
 
 - 任一主流的云存储服务（例如Dropbox/GoogleDrive/华为云/百度云等），通过Hive SDK能将文件/数据存储到该云存储平台中；
-- 有相应的应用体现使用Hive SDK进行文件/数据上传和获取。
+- 有相应的Sample应用体现使用Hive SDK进行文件/数据上传和获取
 
-**开发资源**
+**项目技术要求**
+
+- Java/Swift/C 任一语言开发能力
+
+**参考资源**
 
 - Hive Native SDK： https://github.com/elastos/Elastos.NET.Hive.Native.SDK
 - Hive Java SDK： https://github.com/elastos/Elastos.NET.Hive.Java.SDK
