--- a/content/discover/hackathons/202005_beijing/7.md
+++ b/content/discover/hackathons/202005_beijing/7.md
@@ -41,7 +41,7 @@ jiangzehua@gelaxy.io
 * git
 * cmake
 
-9.参考资源
+**参考资源**
 
 * 主链仓库地址 https://github.com/elastos/Elastos.ELA/
 * 主链RPC文档：https://github.com/elastos/Elastos.ELA/blob/v0.4.3/docs/jsonrpc_apis.md
