--- a/content/discover/hackathons/202005_beijing/3.md
+++ b/content/discover/hackathons/202005_beijing/3.md
@@ -6,11 +6,27 @@ pre = ""
 alwaysopen = false
 +++
 
+**项目描述**
+
 在支持CR委员选举及CR提案注册的主链版本发布后，链上将会出现很多的提案，有的刚注册上链，有的过了评议期，有的进入了公投期，有的正在执行，有的已经执行结束。本题旨在开发提案处理监测工具，实时监测当前存在的提案详情信息，促进提案的有效处理。
 
+**项目难度**
 
+高
 
-**功能要求**
+**项目社区导师**
+
+Zehua jiang
+
+**导师联系方式**
+
+jiangzehua@gelaxy.io
+
+**合作导师联系方式**
+
+无
+
+**项目产出要求**
 
 * 包含UI界面，可移动端也可以桌面端
 
@@ -22,7 +38,7 @@ alwaysopen = false
 
   
 
-**开发资源**
+**项目技术要求**
 
 * 主链仓库地址   https://github.com/elastos/Elastos.ELA/
 
@@ -34,7 +50,7 @@ alwaysopen = false
 
   
 
-**开发参考文档**
+**参考资源**
 
 CR白皮书：https://www.cyberrepublic.org/elips/
 
